--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
 
   datasource:
     username: postgres
-    password: postgres
+    password: "iadp$110"
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/db_ticket
   jpa:
