--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,10 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
 server:
-  port: 7070
+  port: 3250
+  debug: true
 ticketsystem:
   app:
     jwtSecret: ===================jhsajkdjdsjfdsfsdgsgsdfjkdfs===============
